Did the css part of the filtering buttons

--- a/styles.css
+++ b/styles.css
@@ -122,3 +122,50 @@
         .image-hover-wrapper:hover .base-image {
             opacity: 0;
         }
+
+        .filter-buttons {
+            display: flex;
+            gap: 30px;
+            flex-wrap: wrap;
+        }
+
+        .filter-buttons button{
+            font-size: 16px;
+            font-weight: 200;
+            letter-spacing: 1px;
+            padding: 13px 20px 13px;
+            outline: 0;
+            border: 1px solid black;
+            cursor: pointer;
+            position: relative;
+            background-color: rgba(0, 0, 0, 0);
+            user-select: none;
+            -webkit-user-select: none;
+            touch-action: manipulation;
+        }
+
+        .filter-buttons button::after{
+            content: "";
+            background-color: #ffe54c;
+            width: 100%;
+            z-index: -1;
+            position: absolute;
+            height: 100%;
+            top: 7px;
+            left: 7px;
+            transition: 0.2s;
+        }
+
+        .filter-buttons button:hover::after {
+            top: 0px;
+            left: 0px;
+        }
+
+        @media (min-width: 768px) {
+            .filter-buttons button{
+                padding: 13px 50px 13px;
+            }
+        }
+
+
+
