--- a/styles.css
+++ b/styles.css
@@ -220,6 +220,32 @@
             margin: 5px 0;
         }
 
+        .buy-button{
+            margin-top: 2em;
+            display: inline-block;
+            width: 100%;
+            text-align: center;
+            text-decoration: none;
+            font-family: inherit;
+            font-size: inherit;
+            outline: none;
+            color: #DAA06D;
+            padding: 0.6em 0;
+            padding-left: 3em;
+            padding-right: 3em;
+            border: 2px dashed #DAA06D;
+            border-radius: 15px;
+            background-color: #EADDCA;
+            box-shadow: 0 0 0 4px #EADDCA, 2px 2px 4px 2px rgba(0, 0, 0, 0.5);
+            transition: .1s ease-in-out, .4s color;
+            box-sizing: border-box;
+        }
+
+        .buy-button:active {
+            transform: translateX(0.1em) translateY(0.1em);
+            box-shadow: 0 0 0 4px #EADDCA, 1.5px 1.5px 2.5px 1.5px rgba(0, 0, 0, 0.5);
+        }
+
 
 
 
