--- a/styles.css
+++ b/styles.css
@@ -212,8 +212,11 @@
 
         .modal-content img {
             width: 100%;
+            height: auto;
+            object-fit: cover;
             border-radius: 10px;
             margin-bottom: 10px;
+            aspect-ratio: 4 / 3;
         }
 
         .modal-content p {
