Added more bags, added an order part so I can change the order of the bags, changed the contacts parts to <a> rather than <span>

--- a/styles.css
+++ b/styles.css
@@ -332,6 +332,11 @@
             font-size: 18px;
         }
 
+        .contacts a {
+            text-decoration: none;
+            color: black;
+        }
+
         .contact-icon {
             width: 30px;
             height: 30px;
