--- a/styles.css
+++ b/styles.css
@@ -213,6 +213,7 @@
             top: 10px;
             font-size: 24px;
             cursor: pointer;
+            font-weight: bold;
         }
 
         .modal-content img {
