--- a/styles.css
+++ b/styles.css
@@ -67,6 +67,7 @@
             flex-direction: column;
             align-items: center;
             text-align: center;
+            font-style: normal;
         }
 
         .bag-card img{
@@ -166,6 +167,13 @@
         .filter-buttons button:hover::after {
             top: 0px;
             left: 0px;
+        }
+
+        .filter-buttons input {
+            height: %100px;
+            width: 250px;
+            border-radius: 25px;
+            padding: 13px 20px 13px;
         }
 
         @media (min-width: 768px) {
